# sibur_testcase

./: Dockerfile  README.md  example.env  main.py  problems_and_solutions.txt  pyproject.toml  requirements.txt
aggregator/: aggregator.py
bus/: vabus.py
events/: event.py
metrics/: metric.py
