[tool.poetry]
name = "sibur_testcase"
version = "1.0.0"
description = "Test case for Sibur"
authors = ["Александр Гасымов <gazykh@yandex.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiohttp = "^3.8.1"
aiosignal = "^1.3.1"
async-timeout = "^4.0.3"
attrs = "^23.1.0"
frozenlist = "^1.4.0"
idna = "^3.4"
multidict = "^6.0.4"
python-dotenv = "^1.0.0"
yarl = "^1.9.2"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
